fixed products page and fonts

--- a/public/produtos.html
+++ b/public/produtos.html
@@ -11,7 +11,7 @@
     Nossa equipe trabalha para promover a excelência no atendimento.">
   <meta name="keywords" content="Ajepel,Embalagens,embalagens,sacolas,pacotes,tijucas,queimados,florianopolis">
   <!-- Bootstrap CSS -->
-  <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link rel="stylesheet" href="index.css">
@@ -51,7 +51,7 @@
 
   <div class="jumbotron jumbotron-fluid bg-dark text-white border-custom" id="produtos-page">
     <div class="container">
-      <h1 class="display-4 font-weight-bold cp2"><span class="display-1 font-weight-bold cp1">P</span>rodutos</h1>
+      <h1 class="display-4 title-page-text">Produtos</h1>
       <hr class="linha">
       <p class="lead">- Temos a solucao certa para voce e seu negocio,entre nossos produtos dispomos de :</p>
 
@@ -369,73 +369,73 @@
   </div> -->
     <div class="row mb-2">
       <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
-        <button id="menu-products" class="btn btn-secondary m-1" type="button" data-toggle="collapse" data-target="#celofane" aria-expanded="false" aria-controls="collapseExample">
+        <button id="btn1" class="btn btn-secondary m-1 menu-products" type="button" >
           Celofane
         </button>
       </div>
 
       <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
-        <button id="menu-products" class="btn btn-secondary m-1" type="button" data-toggle="collapse" data-target="#cupom" aria-expanded="false" aria-controls="collapseExample">
+        <button id="btn2" class="btn btn-secondary m-1 menu-products" type="button">
           Cupom Fiscal
         </button>
       </div>
 
       <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
-        <button id="menu-products" class="btn btn-secondary m-1" type="button" data-toggle="collapse" data-target="#descartaveis" aria-expanded="false" aria-controls="collapseExample">
+        <button id="btn3" class="btn btn-secondary m-1 menu-products" type="button">
           Descartaveis
         </button>
       </div>
 
       <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
-        <button id="menu-products" class="btn btn-secondary m-1" type="button" data-toggle="collapse" data-target="#embalagens" aria-expanded="false" aria-controls="collapseExample">
+        <button id="btn4" class="btn btn-secondary m-1 menu-products" type="button">
           Embalagens p/Presente
         </button>
       </div>
 
       <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
-        <button id="menu-products" class="btn btn-secondary m-1" type="button" data-toggle="collapse" data-target="#escritorio" aria-expanded="false" aria-controls="collapseExample">
+        <button  id="btn5" class="btn btn-secondary m-1 menu-products" type="button">
           Escritorio
         </button>
       </div>
 
       <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
-        <button id="menu-products" class="btn btn-secondary m-1" type="button" data-toggle="collapse" data-target="#etiquetas" aria-expanded="false" aria-controls="collapseExample">
+        <button id="btn6" class="btn btn-secondary m-1 menu-products" type="button">
           Etiquetas
         </button>
       </div>
 
       <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
-        <button id="menu-products" class="btn btn-secondary m-1" type="button" data-toggle="collapse" data-target="#fitas" aria-expanded="false" aria-controls="collapseExample">
+        <button id="btn7" class="btn btn-secondary m-1 menu-products" type="button">
           Fitas
         </button>
       </div>
 
       <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
-        <button id="menu-products" class="btn btn-secondary m-1" type="button" data-toggle="collapse" data-target="#limpeza" aria-expanded="false" aria-controls="collapseExample">
+        <button id="btn8" class="btn btn-secondary m-1 menu-products" type="button">
           Limpeza /Higiene
         </button>
       </div>
 
       <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
-        <button id="menu-products" class="btn btn-secondary m-1" type="button" data-toggle="collapse" data-target="#maquinas" aria-expanded="false" aria-controls="collapseExample">
+        <button id="btn9" class="btn btn-secondary m-1 menu-products" type="button">
           Maquinas e Suportes
         </button>
       </div>
 
       <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
-        <button id="menu-products" class="btn btn-secondary m-1" type="button" data-toggle="collapse" data-target="#plastico" aria-expanded="false" aria-controls="collapseExample">
+        <button id="btn10" class="btn btn-secondary m-1 menu-products" type="button">
           Plastico Bolha
         </button>
       </div>
 
       <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
-        <button id="menu-products" class="btn btn-secondary m-1" type="button" data-toggle="collapse" data-target="#sacolas" aria-expanded="false" aria-controls="collapseExample">
+        <button id="btn11" class="btn btn-secondary m-1 menu-products" type="button">
           Sacolas
         </button>
       </div>
 
       <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
-        <button id="menu-products" class="btn btn-secondary m-1" type="button" data-toggle="collapse" data-target="#sacos" aria-expanded="false" aria-controls="collapseExample">
+        <button id="btn12" class="btn btn-secondary m-1 menu-products" type="button">
           Sacos
         </button>
       </div>
@@ -445,13 +445,33 @@
 
 <!-- Secao celofane -->
   <div class="container">
-  <div class="collapse" id="celofane">
-    <div class="row">
+  <div id="celofane">
+      <hr class="linha">
+      <h1>Celofane</h1><br>
+      <div class="row">
 
-      <div class="col-3">
+      <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
         <div class="card card-body m-1">
           <div class="card-body">
-            <img class="products m-1" src="images/products/CELOFANE/BOBINA CELOFANE P_ CHURRASCO 80CM EM KG.jpg" alt="..." class="img-thumbnail"><hr>
+            <img class="products" src="images/products/CELOFANE/BOBINA CELOFANE P_ CHURRASCO 80CM EM KG.jpg" alt="..." class="img-thumbnail"><hr>
+            <p class="card-text">Test</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+        <div class="card card-body m-1">
+          <div class="card-body">
+            <img class="products" src="images/products/CELOFANE/BOBINA CELOFANE P_ CHURRASCO 80CM EM KG.jpg" alt="..." class="img-thumbnail"><hr>
+            <p class="card-text">Test</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+        <div class="card card-body m-1">
+          <div class="card-body">
+            <img class="products" src="images/products/CELOFANE/BOBINA CELOFANE P_ CHURRASCO 80CM EM KG.jpg" alt="..." class="img-thumbnail"><hr>
             <p class="card-text">Some quick example text to build</p>
           </div>
         </div>
@@ -461,10 +481,12 @@
   </div>
 
 <!-- Secao cupom -->
-  <div class="collapse" id="cupom">
-    <div class="row">
+  <div  id="cupom">
+      <hr class="linha">
+      <h1>Cupom</h1><br>
+      <div class="row">
 
-      <div class="col-3">
+      <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
         <div class="card card-body m-1">
           <div class="card-body">
             <img class="products m-1" src="images/products/CUPOM FISCAL/BOBINA TÉRMICA 57MMx40MT C_30.jpg" alt="..." class="img-thumbnail"><hr>
@@ -473,7 +495,7 @@
         </div>
       </div>
 
-      <div class="col-3">
+      <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
         <div class="card card-body m-1">
           <div class="card-body">
             <img class="products m-1" src="images/products/CUPOM FISCAL/BOBINA TÉRMICA 80MM UM.jpg" alt="..." class="img-thumbnail"><hr>
@@ -486,7 +508,9 @@
   </div>
 
   <!-- Secao Descartaveis -->
-  <div class="collapse" id="descartaveis">
+  <div  id="descartaveis">
+    <hr class="linha">
+    <h1>Descartaveis</h1><br>
     <div class="row">
 
 
@@ -508,7 +532,7 @@
       <img class="products m-1" src="images/products/DESCARTÁVEIS\TEM O NOME DA DOKASSA.jpg" alt="..." class="img-thumbnail"> -->
 
 
-      <div class="col-3">
+      <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
         <div class="card card-body m-1">
           <div class="card-body">
             <img class="products m-1" src="images/products/CELOFANE/BOBINA CELOFANE P_ CHURRASCO 80CM EM KG.jpg" alt="..." class="img-thumbnail"><hr>
@@ -521,10 +545,12 @@
   </div>
 
   <!-- Secao Embalagem para presentes  -->
-  <div class="collapse" id="embalagens">
+  <div  id="embalagens">
+    <hr class="linha">
+    <h1>Embalagens p Presentes</h1><br>
     <div class="row">
 
-      <div class="col-3">
+      <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
         <div class="card card-body m-1">
           <div class="card-body">
             <img class="products m-1" src="images/products/CELOFANE/BOBINA CELOFANE P_ CHURRASCO 80CM EM KG.jpg" alt="..." class="img-thumbnail"><hr>
@@ -537,10 +563,12 @@
   </div>
 
   <!-- Secao Escritorio -->
-  <div class="collapse" id="escritorio">
+  <div  id="escritorio">
+    <hr class="linha">
+    <h1>Escritorio</h1><br>
     <div class="row">
 
-      <div class="col-3">
+      <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
         <div class="card card-body m-1">
           <div class="card-body">
             <img class="products m-1" src="images/products/CELOFANE/BOBINA CELOFANE P_ CHURRASCO 80CM EM KG.jpg" alt="..." class="img-thumbnail"><hr>
@@ -553,10 +581,12 @@
   </div>
 
   <!-- Secao Etiquetas -->
-  <div class="collapse" id="etiquetas">
+  <div  id="etiquetas">
+    <hr class="linha">
+    <h1>Etiquetas</h1><br>
     <div class="row">
 
-      <div class="col-3">
+      <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
         <div class="card card-body m-1">
           <div class="card-body">
             <img class="products m-1" src="images/products/CELOFANE/BOBINA CELOFANE P_ CHURRASCO 80CM EM KG.jpg" alt="..." class="img-thumbnail"><hr>
@@ -570,10 +600,12 @@
 
 
 <!-- Secao Fitas -->
-  <div class="collapse" id="fitas">
+  <div  id="fitas">
+    <hr class="linha">
+    <h1>Fitas</h1><br>
     <div class="row">
 
-      <div class="col-3">
+      <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
         <div class="card card-body m-1">
           <div class="card-body">
             <img class="products m-1" src="images/products/CELOFANE/BOBINA CELOFANE P_ CHURRASCO 80CM EM KG.jpg" alt="..." class="img-thumbnail"><hr>
@@ -586,10 +618,12 @@
   </div>
 
   <!-- Secao Limpeza -->
-  <div class="collapse" id="limpeza">
+  <div  id="limpeza">
+    <hr class="linha">
+    <h1>Limpeza</h1><br>
     <div class="row">
 
-      <div class="col-3">
+      <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
         <div class="card card-body m-1">
           <div class="card-body">
             <img class="products m-1" src="images/products/CELOFANE/BOBINA CELOFANE P_ CHURRASCO 80CM EM KG.jpg" alt="..." class="img-thumbnail"><hr>
@@ -602,10 +636,12 @@
   </div>
 
   <!-- Secao Maquinas e Suportes  -->
-  <div class="collapse" id="maquinas">
+  <div  id="maquinas">
+    <hr class="linha">
+    <h1>Maquinas e Suportes</h1><br>
     <div class="row">
 
-      <div class="col-3">
+      <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
         <div class="card card-body m-1">
           <div class="card-body">
             <img class="products m-1" src="images/products/CELOFANE/BOBINA CELOFANE P_ CHURRASCO 80CM EM KG.jpg" alt="..." class="img-thumbnail"><hr>
@@ -618,10 +654,12 @@
   </div>
 
   <!-- Secao plastico bolha -->
-  <div class="collapse" id="plastico">
+  <div  id="plastico">
+    <hr class="linha">
+    <h1>Plastico Bolha</h1><br>
     <div class="row">
 
-      <div class="col-3">
+      <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
         <div class="card card-body m-1">
           <div class="card-body">
             <img class="products m-1" src="images/products/CELOFANE/BOBINA CELOFANE P_ CHURRASCO 80CM EM KG.jpg" alt="..." class="img-thumbnail"><hr>
@@ -634,10 +672,12 @@
   </div>
 
   <!-- Secao Sacolas -->
-  <div class="collapse" id="sacolas">
+  <div  id="sacolas">
+    <hr class="linha">
+    <h1>Sacolas</h1><br>
     <div class="row">
 
-      <div class="col-3">
+      <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
         <div class="card card-body m-1">
           <div class="card-body">
             <img class="products m-1" src="images/products/CELOFANE/BOBINA CELOFANE P_ CHURRASCO 80CM EM KG.jpg" alt="..." class="img-thumbnail"><hr>
@@ -650,10 +690,12 @@
   </div>
 
 <!-- Secao Sacos -->
-  <div class="collapse" id="sacos">
+  <div  id="sacos">
+    <hr class="linha">
+    <h1>Sacos</h1><br>
     <div class="row">
 
-      <div class="col-3">
+      <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
         <div class="card card-body m-1">
           <div class="card-body">
             <img class="products m-1" src="images/products/CELOFANE/BOBINA CELOFANE P_ CHURRASCO 80CM EM KG.jpg" alt="..." class="img-thumbnail"><hr>
@@ -664,6 +706,7 @@
 
     </div>
   </div>
+
 
 
 
@@ -677,8 +720,7 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header" style="background-color: #1c1f64;border-bottom:2px solid white">
-          <a href="index.html"<img id="logo-modal" class="logo"></a>
-          <h1 id="title-modal-small-screen" class="display-4 cp2">Contato</h1>
+          <a name="top" <img class="logo"></a>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="color:white">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -704,6 +746,7 @@
         </div>
       </div>
     </div>
+  </div>
   </div>
 
   <!-- Footer -->
@@ -845,7 +888,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  <script src="js/index.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
