--- a/public/index.html
+++ b/public/index.html
@@ -76,8 +76,7 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header" style="background-color: #1c1f64;border-bottom:2px solid white">
-          <a href="index.html"<img id="logo-modal" class="logo"></a>
-          <h1 id="title-modal-small-screen" class="display-4 cp2">Contato</h1>
+          <a name="top" <img id="logo-modal" class="logo"></a>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="color:white">
             <span aria-hidden="true">&times;</span>
           </button>
