--- a/public/produtos.html
+++ b/public/produtos.html
@@ -12,6 +12,7 @@
   <meta name="keywords" content="Ajepel,Embalagens,embalagens,sacolas,pacotes,tijucas,queimados,florianopolis">
   <!-- Bootstrap CSS -->
   <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link rel="stylesheet" href="index.css">
@@ -51,9 +52,9 @@
 
   <div class="jumbotron jumbotron-fluid bg-dark text-white border-custom" id="produtos-page">
     <div class="container">
-      <h1 class="display-4 title-page-text">Produtos</h1>
+      <h1 class="display-4 title-page-text animated fadeInLeftBig">Produtos</h1>
       <hr class="linha">
-      <p class="lead">- Temos a solucao certa para voce e seu negocio,entre nossos produtos dispomos de :</p>
+      <p class="lead animated fadeInRightBig ">- Temos a solucao certa para voce e seu negocio,entre nossos produtos dispomos de :</p>
 
   <!-- <div class="accordion" id="accordionExample">
   <div class="card">
@@ -369,73 +370,73 @@
   </div> -->
     <div class="row mb-2">
       <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
-        <button id="btn1" class="btn btn-secondary m-1 menu-products" type="button" >
+        <button id="btn1" class="btn btn-secondary m-1 menu-products animated fadeIn delay-1s" type="button" >
           Celofane
         </button>
       </div>
 
       <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
-        <button id="btn2" class="btn btn-secondary m-1 menu-products" type="button">
+        <button id="btn2" class="btn btn-secondary m-1 menu-products animated fadeIn delay-1s" type="button">
           Cupom Fiscal
         </button>
       </div>
 
       <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
-        <button id="btn3" class="btn btn-secondary m-1 menu-products" type="button">
+        <button id="btn3" class="btn btn-secondary m-1 menu-products animated fadeIn delay-1s" type="button">
           Descartaveis
         </button>
       </div>
 
       <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
-        <button id="btn4" class="btn btn-secondary m-1 menu-products" type="button">
+        <button id="btn4" class="btn btn-secondary m-1 menu-products animated fadeIn delay-1s" type="button">
           Embalagens p/Presente
         </button>
       </div>
 
       <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
-        <button  id="btn5" class="btn btn-secondary m-1 menu-products" type="button">
+        <button  id="btn5" class="btn btn-secondary m-1 menu-products animated fadeIn delay-1s" type="button">
           Escritorio
         </button>
       </div>
 
       <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
-        <button id="btn6" class="btn btn-secondary m-1 menu-products" type="button">
+        <button id="btn6" class="btn btn-secondary m-1 menu-products animated fadeIn delay-1s" type="button">
           Etiquetas
         </button>
       </div>
 
       <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
-        <button id="btn7" class="btn btn-secondary m-1 menu-products" type="button">
+        <button id="btn7" class="btn btn-secondary m-1 menu-products animated fadeIn delay-1s" type="button">
           Fitas
         </button>
       </div>
 
       <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
-        <button id="btn8" class="btn btn-secondary m-1 menu-products" type="button">
+        <button id="btn8" class="btn btn-secondary m-1 menu-products animated fadeIn delay-1s" type="button">
           Limpeza /Higiene
         </button>
       </div>
 
       <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
-        <button id="btn9" class="btn btn-secondary m-1 menu-products" type="button">
+        <button id="btn9" class="btn btn-secondary m-1 menu-products animated fadeIn delay-1s" type="button">
           Maquinas e Suportes
         </button>
       </div>
 
       <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
-        <button id="btn10" class="btn btn-secondary m-1 menu-products" type="button">
+        <button id="btn10" class="btn btn-secondary m-1 menu-products animated fadeIn delay-1s" type="button">
           Plastico Bolha
         </button>
       </div>
 
       <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
-        <button id="btn11" class="btn btn-secondary m-1 menu-products" type="button">
+        <button id="btn11" class="btn btn-secondary m-1 menu-products animated fadeIn delay-1s" type="button">
           Sacolas
         </button>
       </div>
 
       <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
-        <button id="btn12" class="btn btn-secondary m-1 menu-products" type="button">
+        <button id="btn12" class="btn btn-secondary m-1 menu-products animated fadeIn delay-1s" type="button">
           Sacos
         </button>
       </div>
