fixed mail template on SendGrid and Links

--- a/public/contato.html
+++ b/public/contato.html
@@ -90,11 +90,11 @@
           <a id="links-contato" href="https://www.instagram.com/ajepel/" target="_blank" class="ins-ic col-xs-12 col-sm-12 col-6 col-md-3">
             <i id="contato-alt" class="fab fa-2x fa-instagram"></i><span id="contato-alt-text" class="h5 ml-2">Instagram</span>
           </a>
-          <a id="links-contato" href="https://wa.me/610414515970?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website" target="_blank" class="wp-ic col-xs-12 col-sm-12 col-6 col-md-3">
+          <a id="links-contato" data-toggle="modal" data-target="#wp-pop" href="#"  class="wp-ic col-xs-12 col-sm-12 col-6 col-md-3">
             <i id="contato-alt" class="fab fa-2x fa-whatsapp"></i><span id="contato-alt-text" class="h5 ml-2">Whatsapp</span>
           </a>
           <a id="links-contato" href="tel:+554832632457" class="wp-iccol-xs-12 col-sm-12 col-6 col-md-3">
-            <i id="contato-alt" class="fa fa-lg fa-phone mr-1 text-white"></i><span id="contato-alt-text" class="h5 ml-1 text-white">(48)3263-2457</span>
+            <i id="contato-alt" class="fa fa-lg fa-phone mr-1 text-white"></i><span id="contato-alt-text" class="h5 ml-1 text-white">(48) 3263-2457</span>
           </a>
         </div>
       </div>
