--- a/public/sobre.html
+++ b/public/sobre.html
@@ -78,15 +78,15 @@
         <div class="modal-body pt-3" style="background-color:rgb(3, 3, 3)">
           <br>
           <a  id="modal-links" class="m-auto text-center" href="tel:+5548996837078">
-            <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9683 7078</a> <a id="modal-wp-icon" href="https://wa.me/5548996837078?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website">
+            <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9683 7078</a> <a id="modal-wp-icon" href="https://wa.me/5548996837078?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website" target="_blank">
               <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
           </a>
           <a  id="modal-links" class="m-auto text-center" href="tel:+5548999014810">
-            <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9901 4810 <a id="modal-wp-icon" href="https://wa.me/5548999014810?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website">
+            <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9901 4810 <a id="modal-wp-icon" href="https://wa.me/5548999014810?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website" target="_blank">
               <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
           </a>
           <a  id="modal-links" class="m-auto text-center" href="tel:+5548999167080">
-            <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9916 7080 <a id="modal-wp-icon" href="https://wa.me/5548999167080?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website">
+            <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9916 7080 <a id="modal-wp-icon" href="https://wa.me/5548999167080?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website" target="_blank">
               <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
           </a>
         </div>
