--- a/public/contato.html
+++ b/public/contato.html
@@ -106,7 +106,7 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header" style="background-color: #1c1f64;border-bottom:2px solid white">
-          <a name="top" <img class="logo"></a>
+          <a name="top" <img id="logo-modal" class="logo"></a>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="color:white">
             <span aria-hidden="true">&times;</span>
           </button>
