pointed DNS to ajepel.com.br

--- a/public/contato.html
+++ b/public/contato.html
@@ -50,6 +50,13 @@
   <!-- Contato area -->
   <div class="jumbotron jumbotron-fluid bg-dark text-white border-custom" id="contato-page">
     <div class="container">
+
+      <div class="alert alert-warning text-center" role="alert">
+        <i class="fas  fa-lg fa-exclamation-triangle"></i>
+         Essa pagina encontra em processo de desenvolvimento. Pedimos desculpas pelo incoveniente.
+      <i class="fas fa-lg fa-exclamation-triangle"></i>
+    </div>
+
       <h1 class="display-4 title-page-text">Contato</h1>
       <hr class="linha">
       <p class="lead">Envie-nos uma mensagem! Nos teremos o prazer de ouvir suas críticas, sugestões e elogios. Você pode utilizar o formulário abaixo e enviar a sua solicitação.</p>
