Implementing products section

--- a/public/produtos.html
+++ b/public/produtos.html
@@ -1847,13 +1847,115 @@
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
             <div class="card card-body m-1">
-
-                <img src="images/products/CELOFANE/BOBINA CELOFANE P_ CHURRASCO 80CM EM KG.jpg" alt="..." class="img-thumbnail">
+                <img src="images/products/MÁQUINAS E SUPORTES/AGULHA P_ MÁQUINA TAG PAULIMAQ.jpg" alt="..." class="img-thumbnail">
                 <hr>
-                <p class="card-text">Some quick example text to build</p>
+                <p class="card-text">AGULHA P_ MÁQUINA TAG PAULIMAQ</p>
               </div>
             </div>
-          </div>
+
+          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+            <div class="card card-body m-1">
+                <img src="images/products/MÁQUINAS E SUPORTES/APLICADOR DE FITA FERRO T336 CIS.jpg" alt="..." class="img-thumbnail">
+                <hr>
+                <p class="card-text">APLICADOR DE FITA FERRO T336 CIS</p>
+              </div>
+            </div>
+
+          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+            <div class="card card-body m-1">
+                <img src="images/products/MÁQUINAS E SUPORTES/DISPOSITIVO P_ SENHA DE PAREDE.jpg" alt="..." class="img-thumbnail">
+                <hr>
+                <p class="card-text">DISPOSITIVO P_ SENHA DE PAREDE</p>
+              </div>
+            </div>
+
+          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+            <div class="card card-body m-1">
+                <img src="images/products/MÁQUINAS E SUPORTES/ETIQUETADORA MX REF. 2212" alt="..." class="img-thumbnail">
+                <hr>
+                <p class="card-text">ETIQUETADORA MX REF. 2212</p>
+              </div>
+            </div>
+
+          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+            <div class="card card-body m-1">
+                <img src="images/products/MÁQUINAS E SUPORTES/PINO PLÁSTICO _1.000" alt="..." class="img-thumbnail">
+                <hr>
+                <p class="card-text">PINO PLÁSTICO _1.000</p>
+              </div>
+            </div>
+
+          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+            <div class="card card-body m-1">
+                <img src="images/products/MÁQUINAS E SUPORTES/RIBON P_ IMPRESSORA 110x74MM.jpg" alt="..." class="img-thumbnail">
+                <hr>
+                <p class="card-text">RIBON P_ IMPRESSORA 110x74MM</p>
+              </div>
+            </div>
+
+          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+            <div class="card card-body m-1">
+                <img src="images/products/MÁQUINAS E SUPORTES/SUPORTE P_ BOBINAS_.jpg" alt="..." class="img-thumbnail">
+                <hr>
+                <p class="card-text">SUPORTE P. BOBINAS</p>
+              </div>
+            </div>
+
+          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+            <div class="card card-body m-1">
+                <img src="images/products/MÁQUINAS E SUPORTES/SUPORTE P_ COPO 180ML PREMISSE.jpg" alt="..." class="img-thumbnail">
+                <hr>
+                <p class="card-text">SUPORTE P_ COPO 180ML PREMISSE</p>
+              </div>
+            </div>
+
+          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+            <div class="card card-body m-1">
+                <img src="images/products/MÁQUINAS E SUPORTES/SUPORTE P_ COPO 180ML PREMISSE(1).jpg" alt="..." class="img-thumbnail">
+                <hr>
+                <p class="card-text">SUPORTE P_ COPO 180ML</p>
+              </div>
+            </div>
+
+          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+            <div class="card card-body m-1">
+                <img src="images/products/MÁQUINAS E SUPORTES/SUPORTE P_ COPO SUJO 2 FUROS.jpg" alt="..." class="img-thumbnail">
+                <hr>
+                <p class="card-text">SUPORTE P_ COPO SUJO 2 FUROS</p>
+              </div>
+            </div>
+
+          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+            <div class="card card-body m-1">
+                <img src="images/products/MÁQUINAS E SUPORTES/SUPORTE P_ DUREX ACRIMET GR REF. 271.2" alt="..." class="img-thumbnail">
+                <hr>
+                <p class="card-text">SUPORTE P_ DUREX ACRIMET GR REF. 271.2</p>
+              </div>
+            </div>
+
+          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+            <div class="card card-body m-1">
+                <img src="images/products/MÁQUINAS E SUPORTES/SUPORTE P_ PAPEL HIGIÊNICO ROLÃO.jpg" alt="..." class="img-thumbnail">
+                <hr>
+                <p class="card-text">SUPORTE P_ PAPEL HIGIÊNICO ROLÃO</p>
+              </div>
+            </div>
+
+          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+            <div class="card card-body m-1">
+                <img src="images/products/MÁQUINAS E SUPORTES/SUPORTE P_ PAPEL TOALHA PREMISSE BRANCO.jpg" alt="..." class="img-thumbnail">
+                <hr>
+                <p class="card-text">SUPORTE P_ PAPEL TOALHA PREMISSE BRANCO</p>
+              </div>
+            </div>
+
+          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+            <div class="card card-body m-1">
+                <img src="images/products/MÁQUINAS E SUPORTES/SUPORTE P_ SABONETE LIQUIDO PREMISSE.jpg" alt="..." class="img-thumbnail">
+                <hr>
+                <p class="card-text">SUPORTE P_ SABONETE LIQUIDO PREMISSE</p>
+              </div>
+            </div>
 
         </div>
       </div>
@@ -1872,7 +1974,7 @@
                 <p class="card-text">Some quick example text to build</p>
               </div>
             </div>
-          </div>
+
 
         </div>
       </div>
@@ -1891,7 +1993,7 @@
                 <p class="card-text">Some quick example text to build</p>
               </div>
             </div>
-          </div>
+          
 
         </div>
       </div>
