product page changes

--- a/public/produtos.html
+++ b/public/produtos.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="index.css">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 
-  <title>Ajepel</title>
+  <title>Ajepel Embalagens - Produtos</title>
 </head>
 
 <body>
@@ -147,7 +147,7 @@
     <div class="container">
       <div id="celofane">
         <hr class="linha">
-        <h1>Celofane</h1><br>
+        <h2 class="text-center btn-secondary disabled border p-1">Celofane</h2><br>
         <div class="row">
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
@@ -166,7 +166,7 @@
       <!-- Secao cupom -->
       <div id="cupom">
         <hr class="linha">
-        <h1>Cupom</h1><br>
+        <h2 class="text-center btn-secondary disabled border p-1">Cupom</h2><br>
         <div class="row">
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
@@ -196,7 +196,7 @@
       <!-- Secao Descartaveis -->
       <div id="descartaveis">
         <hr class="linha">
-        <h1>Descartaveis</h1><br>
+        <h2 class="text-center btn-secondary disabled border p-1">Descartaveis</h2><br>
         <div class="row">
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
@@ -365,7 +365,7 @@
       <!-- Secao Embalagem para presentes  -->
       <div id="embalagens">
         <hr class="linha">
-        <h1>Embalagens p Presentes</h1><br>
+        <h2 class="text-center btn-secondary disabled border p-1">Embalagens p Presentes</h2><br>
         <div class="row">
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
@@ -788,7 +788,7 @@
       <!-- Secao Escritorio -->
       <div id="escritorio">
         <hr class="linha">
-        <h1>Escritorio</h1><br>
+        <h2 class="text-center btn-secondary disabled border p-1">Escritorio</h2><br>
         <div class="row">
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
@@ -1458,7 +1458,7 @@
       <!-- Secao Etiquetas -->
       <div id="etiquetas">
         <hr class="linha">
-        <h1>Etiquetas</h1><br>
+        <h2 class="text-center btn-secondary disabled border p-1">Etiquetas</h2><br>
         <div class="row">
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
@@ -1678,7 +1678,7 @@
       <!-- Secao Fitas -->
       <div id="fitas">
         <hr class="linha">
-        <h1>Fitas</h1><br>
+        <h2 class="text-center btn-secondary disabled border p-1">Fitas</h2><br>
         <div class="row">
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
@@ -1745,7 +1745,7 @@
       <!-- Secao Limpeza -->
       <div id="limpeza">
         <hr class="linha">
-        <h1>Limpeza</h1><br>
+        <h2 class="text-center btn-secondary disabled border p-1">Limpeza</h2><br>
         <div class="row">
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
@@ -1842,7 +1842,7 @@
       <!-- Secao Maquinas e Suportes  -->
       <div id="maquinas">
         <hr class="linha">
-        <h1>Maquinas e Suportes</h1><br>
+        <h2 class="text-center btn-secondary disabled border p-1">Maquinas e Suportes</h2><br>
         <div class="row">
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
@@ -1963,18 +1963,17 @@
       <!-- Secao plastico bolha -->
       <div id="plastico">
         <hr class="linha">
-        <h1>Plastico Bolha</h1><br>
+        <h2 class="text-center btn-secondary disabled border p-1">Plastico Bolha</h2><br>
         <div class="row">
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
             <div class="card card-body m-1">
 
-                <img src="images/products/CELOFANE/BOBINA CELOFANE P_ CHURRASCO 80CM EM KG.jpg" alt="..." class="img-thumbnail">
+                <img src="images/products/PLÁSTICO BOLHA/BOBINA PLÁSTICO BOLHA 1.20x100MT.jpg" alt="..." class="img-thumbnail">
                 <hr>
-                <p class="card-text">Some quick example text to build</p>
+                <p class="card-text">BOBINA PLÁSTICO BOLHA 1.20 x 100MT</p>
               </div>
             </div>
-
 
         </div>
       </div>
@@ -1982,18 +1981,64 @@
       <!-- Secao Sacolas -->
       <div id="sacolas">
         <hr class="linha">
-        <h1>Sacolas</h1><br>
+        <h2 class="text-center btn-secondary disabled border p-1">Sacolas</h2><br>
         <div class="row">
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
             <div class="card card-body m-1">
-
-                <img src="images/products/CELOFANE/BOBINA CELOFANE P_ CHURRASCO 80CM EM KG.jpg" alt="..." class="img-thumbnail">
+                <img src="images/products/SACOLAS/SACOLA PLÁSTICA ALTAPLAST C_1000.jpg" alt="..." class="img-thumbnail">
                 <hr>
-                <p class="card-text">Some quick example text to build</p>
+                <p class="card-text">SACOLA PLÁSTICA ALTAPLAST C_1000</p>
               </div>
             </div>
-          
+
+          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+            <div class="card card-body m-1">
+                <img src="images/products/SACOLAS/SACOLA PLÁSTICA B. DE PALHAÇO PRATA C_ 5KG.jpg" alt="..." class="img-thumbnail">
+                <hr>
+                <p class="card-text">SACOLA PLÁSTICA B. DE PALHAÇO PRATA C_ 5KG</p>
+              </div>
+            </div>
+
+          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+            <div class="card card-body m-1">
+                <img src="images/products/SACOLAS/SACOLA PLÁSTICA B. DE PALHAÇO VERMELHA C_ 5KG.jpg" alt="..." class="img-thumbnail">
+                <hr>
+                <p class="card-text">SACOLA PLÁSTICA B. DE PALHAÇO VERMELHA C_ 5KG</p>
+              </div>
+            </div>
+
+          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+            <div class="card card-body m-1">
+                <img src="images/products/SACOLAS/SACOLA PLÁSTICA B. DE PALHAÇO.jpg" alt="..." class="img-thumbnail">
+                <hr>
+                <p class="card-text">SACOLA PLÁSTICA B. DE PALHAÇO</p>
+              </div>
+            </div>
+
+          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+            <div class="card card-body m-1">
+                <img src="images/products/SACOLAS/SACOLA PLÁSTICA B. DE PALHAÇO(1).jpg" alt="..." class="img-thumbnail">
+                <hr>
+                <p class="card-text">SACOLA PLÁSTICA B. DE PALHAÇO</p>
+              </div>
+            </div>
+
+          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+            <div class="card card-body m-1">
+                <img src="images/products/SACOLAS/SACOLA PLÁSTICA REC. BRANCA.jpg" alt="..." class="img-thumbnail">
+                <hr>
+                <p class="card-text">SACOLA PLÁSTICA REC. BRANCA</p>
+              </div>
+            </div>
+
+          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+            <div class="card card-body m-1">
+                <img src="images/products/SACOLAS/SACOLA PLÁSTICA REC. VERDE_.jpg" alt="..." class="img-thumbnail">
+                <hr>
+                <p class="card-text">SACOLA PLÁSTICA REC. VERDE</p>
+              </div>
+            </div>
 
         </div>
       </div>
@@ -2001,18 +2046,88 @@
       <!-- Secao Sacos -->
       <div id="sacos">
         <hr class="linha">
-        <h1>Sacos</h1><br>
+        <h2 class="text-center btn-secondary disabled border p-1">Sacos</h2><br>
         <div class="row">
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
             <div class="card card-body m-1">
-
-                <img src="images/products/CELOFANE/BOBINA CELOFANE P_ CHURRASCO 80CM EM KG.jpg" alt="..." class="img-thumbnail">
+                <img src="images/products/SACOS/BOBINA PICOTADA EM KG.jpg" alt="..." class="img-thumbnail">
                 <hr>
-                <p class="card-text">Some quick example text to build</p>
+                <p class="card-text">BOBINA PICOTADA EM KG</p>
               </div>
             </div>
-          </div>
+
+          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+            <div class="card card-body m-1">
+                <img src="images/products/SACOS/DIVERSOS SACOS PLÁSTICOS.jpg" alt="..." class="img-thumbnail">
+                <hr>
+                <p class="card-text">DIVERSOS SACOS PLÁSTICOS</p>
+              </div>
+            </div>
+
+          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+            <div class="card card-body m-1">
+                <img src="images/products/SACOS/SACO DE PAPEL BRANCO 1KG C_500.jpg" alt="..." class="img-thumbnail">
+                <hr>
+                <p class="card-text">SACO DE PAPEL BRANCO 1KG C_500</p>
+              </div>
+            </div>
+
+          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+            <div class="card card-body m-1">
+                <img src="images/products/SACOS/SACO DE PAPEL KRAFIT 1KG C_500.jpg" alt="..." class="img-thumbnail">
+                <hr>
+                <p class="card-text">SACO DE PAPEL KRAFIT 1KG C_500</p>
+              </div>
+            </div>
+
+          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+            <div class="card card-body m-1">
+                <img src="images/products/SACOS/SACO DE PAPEL KRAFIT 3KG C_500.jpg" alt="..." class="img-thumbnail">
+                <hr>
+                <p class="card-text">SACO DE PAPEL KRAFIT 3KG C_500</p>
+              </div>
+            </div>
+
+          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+            <div class="card card-body m-1">
+                <img src="images/products/SACOS/SACO DE PAPEL KRAFIT 15KG C_500.jpg" alt="..." class="img-thumbnail">
+                <hr>
+                <p class="card-text">SACO DE PAPEL KRAFIT 15KG C_500</p>
+              </div>
+            </div>
+
+          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+            <div class="card card-body m-1">
+                <img src="images/products/SACOS/SACO DE PAPEL P_ X SALADA AMANTEIGADO C_500.jpg" alt="..." class="img-thumbnail">
+                <hr>
+                <p class="card-text">SACO DE PAPEL P_ X SALADA AMANTEIGADO C_500</p>
+              </div>
+            </div>
+
+          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+            <div class="card card-body m-1">
+                <img src="images/products/SACOS/SACO DE PIPOCA ML. BRANCO C_500.jpg" alt="..." class="img-thumbnail">
+                <hr>
+                <p class="card-text">SACO DE PIPOCA ML. BRANCO C_500</p>
+              </div>
+            </div>
+
+          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+            <div class="card card-body m-1">
+                <img src="images/products/SACOS/SACOS E BOBINAS PLÁSTICAS.jpg" alt="..." class="img-thumbnail">
+                <hr>
+                <p class="card-text">SACOS E BOBINAS PLÁSTICAS</p>
+              </div>
+            </div>
+
+          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+            <div class="card card-body m-1">
+                <img src="images/products/SACOS/SACOS PLÁSTICOS PE 22x45, 30x40, 35x45 05.jpg" alt="..." class="img-thumbnail">
+                <hr>
+                <p class="card-text">SACOS PLÁSTICOS PE 22x45, 30x40, 35x45</p>
+              </div>
+            </div>
 
         </div>
       </div>
