--- a/public/contato.html
+++ b/public/contato.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="index.css">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 
-  <title>Ajepel</title>
+  <title>Ajepel Embalagens - Contato</title>
 </head>
 
 <body>
