--- a/public/sobre.html
+++ b/public/sobre.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="index.css">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 
-  <title>Ajepel</title>
+  <title>Ajepel Embalagens - Sobre</title>
 </head>
 
 <body>
