product page changes

--- a/public/produtos.html
+++ b/public/produtos.html
@@ -56,11 +56,11 @@
   <div class="jumbotron jumbotron-fluid bg-dark text-white border-custom" id="produtos-page">
     <div class="container">
 
-      <div class="alert alert-warning text-center" role="alert">
+      <!-- <div class="alert alert-warning text-center" role="alert">
         <i class="fas  fa-lg fa-exclamation-triangle"></i>
         Essa pagina encontra em processo de desenvolvimento. Pedimos desculpas pelo incoveniente.
         <i class="fas fa-lg fa-exclamation-triangle"></i>
-      </div>
+      </div> -->
 
       <h1 class="display-4 title-page-text animated fadeInLeftBig">Produtos</h1>
       <hr class="linha">
